# sfml_game_dev

./: CMakeLists.txt
docs/: PROJECT_STRUCTURE.md
engine/: CMakeLists.txt
engine/include/: config.h
game/: CMakeLists.txt  config.h.in
game/include/: config.h
game/include/Core/: Game.h
game/src/: main.cpp
game/src/Core/: Game.cpp
